# MNTU-edu-archive

./: .gitignore  README.md
Semester-3/Basics-of-Programming/practic-work-03/: ПР_03.sln
Semester-3/Basics-of-Programming/practic-work-03/ПР_03/: ПР_03.cpp  ПР_03.vcxproj  ПР_03.vcxproj.filters
Semester-3/Basics-of-Programming/practic-work-04/: ПР_04.sln
Semester-3/Basics-of-Programming/practic-work-04/ПР_04/: ПР_04.cpp  ПР_04.vcxproj  ПР_04.vcxproj.filters
Semester-3/Basics-of-Programming/practic-work-05/: ПР_05.sln
Semester-3/Basics-of-Programming/practic-work-05/ПР_05/: ПР_05.cpp  ПР_05.vcxproj  ПР_05.vcxproj.filters
Semester-3/Basics-of-Programming/practic-work-06/: ПР_06.sln
Semester-3/Basics-of-Programming/practic-work-07/: ПР_07.sln
Semester-5/OOP/Diagnostic-Test-1/Task-3/: CMakeLists.txt
Semester-5/OOP/practicle-projects/practic-7/: CMakeLists.txt
Semester-5/OOP/practicle-projects/practic-7/clases/: Menu.cpp  Menu.h  Object.cpp  Object.h  Pyramid.cpp  Pyramid.h  QuadrangularPyramid.cpp  QuadrangularPyramid.h  Sphere.cpp  Sphere.h  TriangularPyramid.cpp  TriangularPyramid.h  main.cpp
Semester-5/Operating-Systems/practic-work-12/: filecreate.sh  hello.sh  info.sh  input.sh  sum.sh
Semester-5/Operating-Systems/practic-work-13/: check_arg.sh  check_num.sh  compare.sh  filecheck.sh  login.sh  passcheck.sh
Semester-5/Operating-Systems/practic-work-14/: countdown.sh  listfiles.sh  menu.sh  numbers.sh  sumloop.sh  waitfile.sh
Semester-5/Operating-Systems/practic-work-15/: backupdir.sh  countwords.sh  filesize.sh  funcs.sh  multilog.sh  search.sh
(+30 files in other folders)
